Archive2/00/2a85b453e7baa8/output
main.cpp:29:7: error: 'operator=' is a private member of 'myClass::A_t'
    A = 42;
    ~ ^ ~~
main.cpp:9:14: note: implicitly declared private here
        A_t& operator=(int p) { A = p; return *this; }
             ^
1 error generated.
